paths to styles.css edited, readme completed with screenshots

--- a/src/task1.html
+++ b/src/task1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Введение в CSS</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="task1">
 <div>
