--- a/src/task2.html
+++ b/src/task2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Стилизованные списки</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="task2">
 <div>
