--- a/src/task3.html
+++ b/src/task3.html
@@ -8,33 +8,39 @@
 <body class="task2">
 <div align="center">
     <table>
-        <tr>
-            <th>Country</th><th>Population</th><th>Score</th>
-        </tr>
-        <tr>
-            <td>Somewhere</td><td>3M</td><td>25</td>
-        </tr>
-        <tr>
-            <td>That place</td><td>23M</td><td>235</td>
-        </tr>
-        <tr>
-            <td>Somewhere</td><td>3M</td><td>25</td>
-        </tr>
-        <tr>
-            <td>Somewhere else</td><td>12M</td><td>125</td>
-        </tr>
-        <tr>
-            <td>That place</td><td>23M</td><td>235</td>
-        </tr>
-        <tr>
-            <td>Somewhere</td><td>3M</td><td>25</td>
-        </tr>
-        <tr>
-            <td>Somewhere else</td><td>12M</td><td>125</td>
-        </tr>
-        <tr>
-            <td>That place</td><td>23M</td><td>235</td>
-        </tr>
+        <thead>
+            <tr>
+                <td>Country</td><td>Population</td><td>Score</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Somewhere</td><td>3M</td><td>25</td>
+            </tr>
+            <tr>
+                <td>That place</td><td>23M</td><td>235</td>
+            </tr>
+            <tr>
+                <td>Somewhere</td><td>3M</td><td>25</td>
+            </tr>
+            <tr>
+                <td>Somewhere else</td><td>12M</td><td>125</td>
+            </tr>
+            <tr>
+                <td>That place</td><td>23M</td><td>235</td>
+            </tr>
+            <tr>
+                <td>Somewhere</td><td>3M</td><td>25</td>
+            </tr>
+            <tr>
+                <td>Somewhere else</td><td>12M</td><td>125</td>
+            </tr>
+            <tr>
+                <td>That place</td><td>23M</td><td>235</td>
+            </tr>
+        </tbody>
+
+
     </table>
 </div>
 </body>
