missed lines added into table

--- a/src/task3.html
+++ b/src/task3.html
@@ -7,18 +7,24 @@
 </head>
 <body class="task2">
 <div align="center">
+
     <table>
         <thead>
-            <tr>
-                <td>Country</td><td>Population</td><td>Score</td>
-            </tr>
-        </thead>
+    <tr>
+        <td>Country</td><td>Population</td><td>Score</td>
+    </tr>
+
+    </thead>
         <tbody>
             <tr>
-                <td>Somewhere</td><td>3M</td><td>25</td>
+                <td>Somewhere </td><td>3M </td><td>25</td>
             </tr>
             <tr>
-                <td>That place</td><td>23M</td><td>235</td>
+                <td>Somewhere else</td><td>12M</td><td>125</td>
+            </tr>
+            <tr>
+                <td>
+                    That place</td><td>23M</td><td>235</td>
             </tr>
             <tr>
                 <td>Somewhere</td><td>3M</td><td>25</td>
@@ -30,7 +36,7 @@
                 <td>That place</td><td>23M</td><td>235</td>
             </tr>
             <tr>
-                <td>Somewhere</td><td>3M</td><td>25</td>
+                <td>Somewhere</td><td>3M </td><td>25</td>
             </tr>
             <tr>
                 <td>Somewhere else</td><td>12M</td><td>125</td>
