--- a/src/task3.html
+++ b/src/task3.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="task2">
-<div align="center">
+<div>
 
     <table>
         <thead>
